# survey

./: app.py  pyproject.toml
flask-survey/: app.py
flask-survey/templates/: home.html
templates/: base.html  question.html  thank_you.html
